objects/Custom_CaseAudit__mdt.object
<CustomObject>
    <label>Custom Case Audit</label>
    <pluralLabel>Custom Case Audits</pluralLabel>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field Mdt</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>Case API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_TypeId__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Audit_API_Name__c</fullName>
        <label>Case Audit API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>